--- a/index.html
+++ b/index.html
@@ -56,5 +56,5 @@
   
   <script src="js/app.js"></script>
   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.js"></script>
   </html>
