--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
     <p>&copy; 2025 CuteStore. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.js"></script>
+  <script src="public/bootstrap.bundle.min.js"></script>
   <script>
     document.querySelectorAll('[data-bs-toggle="tooltip"]').forEach(function(tooltipEl) {
       new bootstrap.Tooltip(tooltipEl);
