--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
 
   <script src="js/app.js"></script>
   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-  <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.js"></script>
+  <script src="public/bootstrap.bundle.min.js"></script>
 
 </body>
 
